Clean/refactor unused/duplicated code blocks # TODO - Many buggy features to fix
Signed-off-by: zhaoxinn <zhaoxinzhang0429@gmail.com>